Fixed Layout Issues

--- a/src/components/feed/FeedOutputBrowser/FeedOutputBrowser.scss
+++ b/src/components/feed/FeedOutputBrowser/FeedOutputBrowser.scss
@@ -242,7 +242,7 @@
   }
 }
 
-.json-display {
+.viewer-display {
     min-height: $fe-viewer-min-heigth;
     background: $fe-viewer-background;
     border: solid 1px $fe-viewer-border;
